add search by name and category endpoint
